--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,30 @@
 backcall==0.1.0
+certifi==2019.9.11
+chardet==3.0.4
 decorator==4.4.1
 Django==2.2.7
+idna==2.8
 ipython==7.9.0
 ipython-genutils==0.2.0
 jedi==0.15.1
+mysql-connector==2.2.9
+mysql-connector-python==8.0.18
 mysqlclient==1.4.5
 parso==0.5.1
 pexpect==4.7.0
 pickleshare==0.7.5
 pkg-resources==0.0.0
 prompt-toolkit==2.0.10
+protobuf==3.10.0
 ptyprocess==0.6.0
 Pygments==2.4.2
+PyMySQL==0.9.3
 pytz==2019.3
+requests==2.22.0
 six==1.13.0
 sqlparse==0.3.0
 traitlets==4.3.3
+urllib3==1.25.7
 wcwidth==0.1.7
+
 
